--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js"
+      integrity="sha256-qM7QTJSlvtPSxVRjVWNM2OfTAz/3k5ovHOKmKXuYMO4="
+      crossorigin="anonymous"
+    ></script>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Redressed&display=swap');
     </style>
