--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Encuentra tu mascota perdida en Rosario!
+      Ayuda a dueños encontrar sus mascotas"
     />
 
     <!--
