--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Perros perdidos</title>
+    <title>Mascotas perdidas</title>
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
